feat: Creates login service

--- a/realtime-chat-api/appsettings.Development.json
+++ b/realtime-chat-api/appsettings.Development.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt":{
+    "Key":"",
+    "Issuer":"",
+    "Audience": ""
+  },
   "ConnectionStrings": {
     "DefaultConnection" : "Host=localhost; Port=5432; Database=chatdb; Username=postgres; Password=1q2w3e!@#; Trust Server Certificate= true;"
   }
